--- a/Starter_Code/credit_risk_resampling_HW.ipynb
+++ b/Starter_Code/credit_risk_resampling_HW.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
        "[5 rows x 86 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +563,7 @@
        "[5 rows x 96 columns]"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -904,7 +904,7 @@
        "[8 rows x 95 columns]"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -915,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -926,7 +926,7 @@
        "Name: loan_status, dtype: int64"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -938,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -948,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -989,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -998,7 +998,7 @@
        "Counter({'low_risk': 51352, 'high_risk': 51352})"
       ]
      },
-     "execution_count": 202,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1013,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1022,7 +1022,7 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 203,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1036,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1045,7 +1045,7 @@
        "0.7856360112968401"
       ]
      },
-     "execution_count": 209,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1058,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1068,7 +1068,7 @@
        "       [ 2420, 14698]])"
       ]
      },
-     "execution_count": 210,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1080,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1146,7 +1146,7 @@
        "All                 2482     14723  17205"
       ]
      },
-     "execution_count": 211,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1158,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1189,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1198,7 +1198,7 @@
        "Counter({'low_risk': 51352, 'high_risk': 51352})"
       ]
      },
-     "execution_count": 213,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1214,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1223,7 +1223,7 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 214,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1236,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1245,7 +1245,7 @@
        "0.7966770207605626"
       ]
      },
-     "execution_count": 215,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1258,7 +1258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1268,7 +1268,7 @@
        "       [ 2042, 15076]])"
       ]
      },
-     "execution_count": 216,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1280,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1346,7 +1346,7 @@
        "All                   2104     15101  17205"
       ]
      },
-     "execution_count": 217,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1358,7 +1358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1399,7 +1399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1408,7 +1408,7 @@
        "Counter({'high_risk': 260, 'low_risk': 260})"
       ]
      },
-     "execution_count": 219,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1423,7 +1423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1432,7 +1432,7 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 220,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1445,7 +1445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1454,7 +1454,7 @@
        "0.7752245065690078"
       ]
      },
-     "execution_count": 221,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1467,7 +1467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1477,7 +1477,7 @@
        "       [ 3957, 13161]])"
       ]
      },
-     "execution_count": 222,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1489,7 +1489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1555,7 +1555,7 @@
        "All                4025     13180  17205"
       ]
      },
-     "execution_count": 224,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1567,7 +1567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1608,9 +1608,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({'high_risk': 51352, 'low_risk': 47520})"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Resample the training data with SMOTEENN\n",
     "sm = SMOTEENN(random_state=1)\n",
@@ -1620,9 +1631,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(random_state=1)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Train the Logistic Regression model using the resampled data\n",
     "model = LogisticRegression(solver='lbfgs', random_state=1)\n",
@@ -1631,9 +1653,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7975170318801342"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Calculated the balanced accuracy score\n",
     "y_pred_sm = model.predict(X_test_scaled)\n",
@@ -1642,9 +1675,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[   63,    24],\n",
+       "       [ 2210, 14908]])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Display the confusion matrix\n",
     "confusion_matrix(y_test, y_pred_sm)"
@@ -1652,9 +1697,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Predicted SMOTEENN</th>\n",
+       "      <th>high_risk</th>\n",
+       "      <th>low_risk</th>\n",
+       "      <th>All</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Actual</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>high_risk</th>\n",
+       "      <td>68</td>\n",
+       "      <td>19</td>\n",
+       "      <td>87</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>low_risk</th>\n",
+       "      <td>3957</td>\n",
+       "      <td>13161</td>\n",
+       "      <td>17118</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>All</th>\n",
+       "      <td>4025</td>\n",
+       "      <td>13180</td>\n",
+       "      <td>17205</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Predicted SMOTEENN  high_risk  low_risk    All\n",
+       "Actual                                        \n",
+       "high_risk                  68        19     87\n",
+       "low_risk                 3957     13161  17118\n",
+       "All                      4025     13180  17205"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pd.crosstab(y_test, y_pred_cc, rownames=[\"Actual\"], \n",
     "            colnames=[\"Predicted SMOTEENN\"], margins=True)"
@@ -1662,9 +1775,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                   pre       rec       spe        f1       geo       iba       sup\n",
+      "\n",
+      "  high_risk       0.03      0.72      0.87      0.05      0.79      0.62        87\n",
+      "   low_risk       1.00      0.87      0.72      0.93      0.79      0.64     17118\n",
+      "\n",
+      "avg / total       0.99      0.87      0.72      0.93      0.79      0.64     17205\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the imbalanced classification report\n",
     "print(classification_report_imbalanced(y_test, y_pred_sm))"
